Fix dark mode list font color

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -47,8 +47,8 @@
   --color-primary: theme("colors.blue.300");
   --color-primary-hover: theme("colors.blue.200");
 
-  --color-secondary: theme("colors.gray.400");
-  --color-secondary-hover: theme("colors.gray.300");
+  --color-secondary: theme("colors.gray.300");
+  --color-secondary-hover: theme("colors.gray.200");
 
   --color-muted: theme("colors.gray.700");
   --color-muted-hover: theme("colors.gray.500");
@@ -69,11 +69,11 @@
   --color-danger-hover: theme("colors.red.500");
   --color-danger-background: theme("colors.red.900");
 
-  --color-body: theme("colors.gray.300");
-  --color-body-muted: theme("colors.gray.500");
+  --color-body: theme("colors.gray.200");
+  --color-body-muted: theme("colors.gray.400");
 
-  --color-heading: theme("colors.gray.200");
-  --color-heading-muted: theme("colors.gray.400");
+  --color-heading: theme("colors.gray.100");
+  --color-heading-muted: theme("colors.gray.300");
 
   --color-link: #a87cf3;
   --color-link-hover: #7c3aed;
